Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6722

QS60Style: Style does not support pressed state for sliders

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 4.6.1
    • 4.6.0
    • GUI: Look'n'Feel
    • None
    • 57a4d8279a64a7844c2a2bf2b45846563c4c3eb5

      Open application with a slider in touch device.
      Press down the slider and move around.

      Notice that there is no visual cue that the slider is pressed. There should be, like there is in the native widget.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            samimeri Sami Merila (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes