QS60Style: Style does not support pressed state for sliders

Currently there is no visual clue that slider is "sunken" (pressed
state). There is S60 theme graphic for it, so lets use it.

Task-number: QTBUG-6722
Reviewed-by: Janne Koskinen